backend/allow-backend-access.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-backend-access
spec:
  podSelector:
    matchLabels:
      networking/allow-backend-access: "true"
  policyTypes:
    - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          tier: "backend"
