backend/allowed-to-access-backend.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allowed-access-to-backend
spec:
  podSelector:
    matchLabels:
      tier: "backend"
  policyTypes:
    - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          networking/allow-backend-access: "true"
